<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="Image"
        android:id="@+id/m_photo"
        android:icon="@drawable/ic_came"
        app:showAsAction="always"/>

    <item
        android:id="@+id/m_delete"
        android:title="Delete"
        android:icon="@drawable/ic_de"
        app:showAsAction="always"/>
    <item
        android:id="@+id/m_save"
        android:title="Save"
        android:icon="@drawable/ic_sa"
        app:showAsAction="always"/>

    <item
        android:title="@string/record"
        android:id="@+id/menu_record"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/record_delete"
        android:id="@+id/menu_record_delete"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/stickynote"
        android:id="@+id/menu_stick"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/share_img"
        android:id="@+id/menu_share_image"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/delete_img"
        android:id="@+id/menu_delete_img"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom"/>
</menu>