<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/notification"
        android:title="Lock"
        android:icon="@drawable/ic_notification"
        app:showAsAction="always"/>
    <item
        android:id="@+id/lock"
        android:title="Lock"
        android:icon="@drawable/ic_log"
        app:showAsAction="always"/>
    <item
        android:title="New"
        android:id="@+id/newnote"
        android:icon="@drawable/ic_new"
        app:showAsAction="always"/>

    <item
        android:title="@string/stickynote"
        android:id="@+id/lststicky"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/Sort"
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/share"
        android:id="@+id/share"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/rateapp"
        android:id="@+id/rateapp"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom"/>
</menu>