<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/alarm_dialog"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:padding="4dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtSaveTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cn_bg1"
        android:text="@string/doyouwanttosave"
        android:textSize="@dimen/cn_txtTitle"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="#DD2C00"
        android:gravity="center"/>
    <EditText
        android:id="@+id/edt_save_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"

        android:gravity="center"
        android:inputType="numberPassword"
        android:hint="@string/password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_save_back"
            android:layout_width="0dp"
            android:layout_height="@dimen/cn_bg1"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#fff"
            android:background="#37474F"/>
        <Button
            android:id="@+id/btn_save_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/cn_bg1"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="#fff"
            android:background="#00897B"/>
    </LinearLayout>
</LinearLayout>