<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/alarm_dialog"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:padding="4dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title_many"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/manyImg"
        android:textSize="@dimen/cn_txtTitle"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="#DD2C00"
        android:gravity="center"/>
    <TextView
        android:id="@+id/pls"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/pls_delete"
        android:textSize="@dimen/cn_txtTitle"
        android:textColor="#DD2C00"
        android:textStyle="bold"
        android:background="#fff"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_b"
            android:layout_width="0dp"
            android:layout_height="@dimen/cn_bg1"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#fff"
            android:background="#37474F"/>
        <Button
            android:id="@+id/btn_o"
            android:layout_width="0dp"
            android:layout_height="@dimen/cn_bg1"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="#fff"
            android:background="#00897B"/>
    </LinearLayout>
</LinearLayout>