<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/alarm_dialog"
    android:layout_height="wrap_content"
    android:background="#fff"

    android:padding="4dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/cn_bg1"
        android:text="@string/time_notification"
        android:textSize="@dimen/cn_txtTitle"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="#DD2C00"
        android:gravity="center"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <EditText
           android:textColor="#000"

           android:id="@+id/edt_hours"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:inputType="number"
           android:layout_height="wrap_content" />
       <Spinner
           android:id="@+id/spinner"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:textColor="#000"

           android:layout_height="wrap_content">
       </Spinner>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_noti_back"
            android:layout_width="0dp"
            android:layout_height="@dimen/cn_bg1"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#fff"
            android:background="#37474F"/>
        <Button
            android:id="@+id/btn_noti_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/cn_bg1"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="#fff"
            android:background="#00897B"/>
    </LinearLayout>
</LinearLayout>