<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/alarm_dialog"
    android:layout_height="wrap_content"
    android:background="#fff"

    android:padding="4dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/cn_bg1"
        android:text="@string/Sort"
        android:textSize="@dimen/cn_txtTitle"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="#DD2C00"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/m_btn_sort_up"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_up"/>
        <ImageButton
            android:id="@+id/m_btn_sort_down"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_down"/>
        <Spinner
            android:layout_gravity="center"
            android:id="@+id/m_spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#000"
            android:layout_height="56dp">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_s_back"
            android:layout_width="0dp"
            android:layout_height="@dimen/cn_bg1"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#fff"
            android:background="#37474F"/>
        <Button
            android:id="@+id/btn_s_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/cn_bg1"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="#fff"
            android:background="#00897B"/>
    </LinearLayout>
</LinearLayout>